# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: main-check.yml
file_loader/: loader.py
gendiff/: file2.json  generate_diff.py
gendiff/files/: file1.json
gendiff/parsers/: parsers.py
gendiff/scripts/: gendiff.py
python_project_50/: gendiff.py
scripts/: generate_diff.py
tests/: test_generate_diff.py
tests/fixtures/: json_tree_json_expected.txt  test_gendiff.py
