[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["NikolayZemelko"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_project_50"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
gendiff = "python_project_50.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
